--- a/backend/meerkat-server/Cargo.toml
+++ b/backend/meerkat-server/Cargo.toml
@@ -8,7 +8,7 @@ tokio = { version = "1", features = ["full"] }
 axum = { version = "0.8", features = ["ws"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-uuid = { version = "1", features = ["v4"] }
+uuid = { version = "1", features = ["v4", "serde"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json"] }
-dashmap = "6"
+dashmap = { version = "6", features = ["serde"] }
