--- a/backend/meerkat-server/Cargo.toml
+++ b/backend/meerkat-server/Cargo.toml
@@ -12,3 +12,7 @@ uuid = { version = "1", features = ["v4", "serde"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json"] }
 dashmap = { version = "6", features = ["serde"] }
+
+[dev-dependencies]
+tokio-tungstenite = "0.26"
+futures-util = "0.3"
